test/ingress/routing/customer3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-customer3
  labels:
    category: customer
spec:
  containers:
  - name: customer3
    image: kubetm/customer
---
apiVersion: v1
kind: Service
metadata:
  name: svc-customer3
spec:
  selector:
    category: customer
  ports:
  - port: 8080
