test/ingress/routing/ingress2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: service-routing2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
        - path: /customer(/|$)(.*)
          backend:
            serviceName: svc-customer2
            servicePort: 8080
        - path: /order(/|$)(.*)
          backend:
            serviceName: svc-order2
            servicePort: 8080
